# nb-runtype

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
nb_runtype/: __init__.py  runtype.py
scripts/: format-code.sh  test-build-install.sh  test-code-formatting.sh
tests/: test_nb_runtype.ipynb
